src/commonmark/en/resources/css/dhis2.css
body {
  margin: auto;
  padding-right: 1em;
  padding-left: 1em;
  max-width: 64em;
  color: black;
  font-family: Arial, 'Open Sans', sans-serif;
  line-height: 140%;
  color: #333;
  counter-reset: chapter;
}

pre {
  background-color: #f7f7f7;
  color: #1a6094;
  font-size: 95%;
  line-height: 1.6em;
  margin: 3.5ex 0;
  padding: 2ex;
}

p code {
  font-family: monospace;
  white-space: normal;
}


blockquote,
q {
  quotes: none;
}

blockquote:before,
q:before,
blockquote:after,
q:after {
  content: none;
}

blockquote {
  background-color: #fcfcfc;
  border: 1px solid #dddddd;
  border-left: 3px solid #aab8c6;
  margin-bottom: 10px;
  padding: 5px 5px 10px 40px;
  background-position: 10px 10px;
  background-repeat: no-repeat;
}

blockquote :last-child {
  margin-bottom: 0;
}

li blockquote {
  margin: 0.5em 0 1em;
}

blockquote p {
  margin: 5px;
}

td blockquote{
  margin: 0px;
  margin-top:5px;
  padding: 5px;
  padding-top:35px;
}
.center{
  display:block;
  margin-left:auto;
  margin-right:auto;
  text-align: center;
}

figure{
  display:block;
  margin-left:auto;
  margin-right:auto;
  text-align: center;
}

figcaption{
  text-align:center;
  margin:1em;
  font-style:italic;
}

.Note{
  background-image: url(../images/admon/note.png);
}

.Tip, .Truc {
  background-image: url(../images/admon/tip.png);
}

.Important{
  background-image: url(../images/admon/important.png);
}

.Caution, .Prudence{
  background-image: url(../images/admon/caution.png);
}

.Warning, .Attention, .Danger{
  background-image: url(../images/admon/warning.png);
}

.thanks{
  border:1px solid #ddd;
  padding:0 1em 0;
  font-family: 'Rubik';
}

caption {
  font-style: italic;
  font-weight: bold;
  padding-bottom: 1em;
  padding-top: 1em;
  text-align: left;
}

a {
  color: #07c;
  cursor: pointer;
  text-decoration: underline;
}

nav a {
  color: #07c;
  cursor: pointer;
  text-decoration: none;
}

.thanks a {
  text-decoration: none;
}

h1 a,
h2 a,
h3 a,
h4 a,
h5 a {
  text-decoration: none;
  color: #000;
}
h1,
h2,
h3,
h4,
h5 {
  font-family: Arial, 'Open Sans';
  font-weight: bold;
  color: #000;
  margin-top: 1.7em;
}
h1 {
  break-before: always;
}

h1.title {
  font-size: 200%;
  font-weight: bold;
  padding-top: 1.2em;
  border: none;
  font-family: 'Rubik', sans-serif;
  text-align: center;
}

h2.subtitle {
  font-size: 180%;
  font-weight: normal;
  padding-bottom: 1.2em;
  padding-left:0px;
  margin-left:0px;
  font-family: 'Rubik', sans-serif;
  text-align: center;
}
dt code {
  font-weight: bold;
}
dd p {
  margin-top: 0;
}

table {
  border-bottom: 1px solid #ddd;
  border-collapse: collapse;
  border-right: 1px solid #ddd;
  border-spacing: 0;
  margin-bottom: 2em;
}

table th {
  background-color: #eee;
  border-left: 1px solid #ddd;
  border-top: 1px solid #ddd;
  padding: 0.4em 1em;
}

table td {
  border-left: 1px solid #ddd;
  border-top: 1px solid #ddd;
  padding: 0.4em 1em;
  vertical-align: top;
}

.navheader table, .navheader th, .navheader td,
.navfooter table, .navfooter th, .navfooter td {
  background-color: #fff;
  border:0px;
}

.navheader table{
    margin-bottom:1em;
}

.navheader a, .navfooter a {
  text-decoration: none;
}

.headerDiv {
  left:0;
  top:0;
  width:100%;
  margin-left:-1em;
  text-align: center;
}

.banner {
  margin-top:67px;
  width: 100%;
  height: 8px;
  background-color: #43CBCB;
}

.coverlogo {
  height: 60px;
  position:absolute;
  top: 5px;
}

.coverlogo img {
  width: 180px;
  display: block;
  padding: 0px;
  background: #FFFFFF;
}

.productionDiv {
  display:none;
}

.license {
  bottom: 0px;
}

#footer {
  padding-top: 1em;
  font-size: 70%;
  color: gray;
  text-align: center;
}

#pagebreak {
  page-break-before: always;
}

h1 {
  string-set: chapter content();
}

h2,
h3 {
  string-set: section content();
}

nav ul {
  list-style-type: none;
}

img {
  max-width: 100%;
  max-height: 800px;
  margin:3%;
}

hr {
  border: 0;
  color: #ccc;
  background-color: #ccc;
  height: 1px;
}

@page {
  size: A4;
  font-family: Arial, 'Open Sans', sans-serif;
  font-size: 85%;
  border-top: 1px solid black;
  border-bottom: 1px solid black;
  margin-top: 40px;
  margin-bottom: 40px;
  @top-right {
    content: string(section);
  }
  @top-left {
    content: string(chapter);
  }
}

@page frontmatter {
  border-top: 1px solid black;
  border-bottom: 1px solid black;

  @top-right {
    content: "";
  }
  @top-left {
    content: "";
  }
  @bottom-right {
    content: counter(page, lower-roman);
    font-family: Arial, 'Open Sans', sans-serif;
    font-size: 85%;
  }
  @bottom-left {
    content: "";
  }
}
@page frontmatter :left {
  border-top: 1px solid black;
  border-bottom: 1px solid black;

  @top-right {
    content: "";
  }
  @top-left {
    content: "";
  }
  @bottom-left {
    content: counter(page, lower-roman);
    font-family: Arial, 'Open Sans', sans-serif;
    font-size: 85%;
  }
  @bottom-right {
    content: "";
  }
}

@page :first {
  border-top: 0px solid black;
  border-bottom: 0px solid black;
  margin: -20px;
  margin-top: 500px;
  text-align: center;

  @top-right {
    content: "";
  }
  @top-left {
    content: "";
  }
  @bottom-right {
    content: "";
  }
  @bottom-left {
    content: "";
  }
}

@page :right {
  @bottom-right {
    content: counter(page);
    font-family: Arial, 'Open Sans', sans-serif;
    font-size: 85%;
  }
}
@page :left {
  @bottom-left {
    content: counter(page);
  }
}

